MyFaces Release Notes
=====================

----------------------------------------------------------------------
Changes in Release 1.0.10
* closed MYFACES-177
* closed MYFACES-199
* closed MYFACES-209
----------------------------------------------------------------------
Changes in Release 1.0.9
* added support for portlet api (MYFACES-86). Thanks to Stan Silver (JBoss Group)
* new CollapsiblePanel Component
* new selectOneCountry component
* added forceId to <x:inputText for better reuse of legacy JavaScript
* added russian i18n.
* added HOWTO Portlet-API (MYFACES/docs/portlet_quick_start.txt)
* improvements for tree2 component from Sean Schofield
* added caching to the ExtensionsFilter
* rename x:htmlEditor to x:inputHtml
* added fallback textarea mode to inputHtml
* added crosstable component (x:columns)
* closed MYFACES-38 in Jira
* closed MYFACES-85 in Jira
* closed MYFACES-96 in Jira (Jason Hoo)
* closed MYFACES-91 in Jira 
* closed MYFACES-79 in Jira 
* closed MYFACES-90 in Jira (i18n support)
* closed MYFACES-86 in Jira (portlet)
* closed MYFACES-83 in Jira (Refactored HtmlTableRendererBase)
* closed MYFACES-82 in Jira (Use submitted value for Radio Buttons)
* closed MYFACES-81 in Jira (StateManager.SerializedView should not implement Serializable)
* closed MYFACES-88 in Jira
* closed MYFACES-89 in Jira
* closed MFACES-76 in Jira
* closed MFACES-74 in Jira
* closed MFACES-104 in Jira
* closed MYFACES-101 in Jira
* closed MYFACES-106 in Jira
* closed MYFACES-60 in Jira
* closed MYFACES-77 in Jira
* closed MYFACES-73 in Jira
* closed MYFACES-97 in Jira
* closed MYFACES-98 in Jira
* closed MYFACES-109 in Jira
* closed MYFACES-111 in Jira
* closed MYFACES-112 in Jira
* closed MYFACES-116 in Jira
* closed MYFACES-125 in Jira
* closed MYFACES-121 in Jira
* closed MYFACES-122 in Jira
* closed MYFACES-126 in Jira
* closed MYFACES-128 in Jira
* closed MYFACES-132 in Jira
* closed MYFACES-138 in Jira
* closed MYFACES-153 in Jira